[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walletgrower-mcp"
version = "1.2.0"
description = "MCP server for AI agents — search, compare, and get recommendations for savings accounts, credit cards, personal loans, budgeting apps, and earning products. 21 tools across 5 financial verticals. Powered by WalletGrower.com editorial data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Fiat Growth LLC", email = "alex@fiatgrowth.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "finance",
    "savings-accounts",
    "credit-cards",
    "personal-loans",
    "budgeting-apps",
    "earning-products",
    "gig-economy",
    "side-income",
    "ai-agents",
    "walletgrower",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://walletgrower.com"
Documentation = "https://walletgrower.com/wp-json/wg/v1/"
Repository = "https://github.com/fiatgrowth/walletgrower-mcp"
Issues = "https://github.com/fiatgrowth/walletgrower-mcp/issues"

[project.scripts]
walletgrower-mcp = "walletgrower_mcp.__main__:main"
